--- a/TODO
+++ b/TODO
@@ -3,4 +3,4 @@ Option for image optimization
 Domain blacklist (e.g. skipping ad/tracking networks)
 Domain whitelist, including restricting to page's domain
 iframe support
-Options to ignore images/css/js/etc.
+Resource extract mode
