--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ Domain blacklist (e.g. skipping ad/tracking networks)
 Domain whitelist, including restricting to page's domain
 iframe support
 Resource extract mode
+Data URIs for images in CSS
